Add 1.13.2 support